--- a/.github/workflows/tag-release.yml
+++ b/.github/workflows/tag-release.yml
@@ -10,14 +10,12 @@ on:
   workflow_dispatch:
 
 jobs:
-  tag:
+  build:
     runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@v4
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-      - name: Create and push tag
-        run: |
+      - uses: actions/checkout@v3
+      - run: |
           VERSION="$(cat version.txt)"
           git tag "$VERSION"
           git push origin tag "$VERSION"
